fix: Page Header text overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,6 +47,12 @@
   }
 }
 
+.skc-page-header__text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .skc-page-header__text + * > .skc-button {
   white-space: nowrap;
 }
